[tool.poetry]
name = "hedera"
version = "0.1.0"
description = "Opensource recordstream"
authors = ["Ngan <ngan88le@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.21.0"
pandas = "^1.3.1"
jsonlines = "2.0.0"
pydantic = "^2.7.1"
typer = "^0.6.1"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pylint = "^2.15.8"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^6.0.0"
flake8-bugbear = "23.3.23"
autopep8 = "^1.5.4"

[tool.poetry.scripts]
hedera-app = 'hedera.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
